--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
     width: 8px;
+    display: none;
   }
 
   ::-webkit-scrollbar-track {
@@ -19,7 +20,7 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
-    background: white;
+    background: whitesmoke;
   }
 
   * {
@@ -44,16 +45,21 @@
     transition: 150ms linear;
   }
 
-  h1 {
+  h1,
+  .header {
     font-weight: 800;
     line-height: 1;
-    font-size: clamp(64px, 10vw, 160px);
+    font-size: clamp(60px, 10vw, 140px);
+  }
+
+  .header {
+    font-size: clamp(48px, 4vw, 64px);
   }
 
   h2 {
     font-weight: 300;
-    line-height: 1;
-    font-size: clamp(24px, 4vw, 64px);
+    line-height: 1.4;
+    font-size: clamp(24px, 4vw, 42px);
   }
 
   p {
@@ -63,7 +69,7 @@
   }
 
   span {
-    font-weight: 500;
+    font-weight: 800;
     font-size: clamp(24px, 2vw, 28px);
     line-height: 1.4;
   }
@@ -72,7 +78,7 @@
   button {
     line-height: 1.4;
     font-size: clamp(16px, 2vw, 22px);
-    font-weight: 400;
+    font-weight: 300;
     text-decoration: none;
     width: fit-content;
     transition: 150ms linear;
@@ -80,7 +86,7 @@
 
   a:hover,
   button:hover {
-    opacity: 0.4;
+    opacity: 0.6;
     transition: 150ms linear;
   }
 
@@ -89,28 +95,41 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 0;
+    top: 1rem;
     transition: 0.3s;
     padding-bottom: 0rem;
     width: 100%;
     z-index: 3;
-    background: #070707;
 
+    a,
     button {
       color: white;
       font-size: clamp(16px, 2vw, 22px);
-      font-weight: 400;
+      font-weight: 300;
     }
   }
 
-  .nav-sub {
-    width: 95%;
+  .nav-nav {
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
-    gap: 2rem;
+    width: 95%;
+    background: #070707;
+    border-radius: 100rem;
+  }
+
+  .nav-sub {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
     height: 5rem;
-    padding-right: 1rem;
+  }
+
+  .nav-links {
+    display: none;
+    gap: 2rem;
   }
 
   .container-holder,
@@ -133,6 +152,17 @@
     width: 95%;
   }
 
+  .container-title {
+    width: 95%;
+    margin-bottom: 18rem;
+    text-align: left;
+
+    h1,
+    h2 {
+      color: white;
+    }
+  }
+
   img {
     object-fit: cover;
     object-position: center center;
@@ -142,13 +172,15 @@
   .img-lg {
     width: 100%;
     height: auto;
-    border: 1px solid whitesmoke;
+    border-radius: 2rem;
     transition: 300ms ease-in-out;
   }
 
-  /* .img-lg {
-    margin-top: 12rem;
-  } */
+  .img-profile {
+    border-radius: 100rem;
+    width: 250px;
+    height: 250px;
+  }
 
   .social-btn-holder {
     gap: 0.6rem;
@@ -162,12 +194,18 @@
   .social-btn {
     width: 4rem;
     height: 4rem;
-    background: whitesmoke;
+    background: #070707;
     border-radius: 100rem;
-    color: #070707;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: 300ms ease-in-out;
+    backdrop-filter: blur(20px);
+  }
+
+  .social-btn:hover {
+    scale: 0.9;
+    transition: 300ms ease-in-out;
   }
 
   .text-holder {
@@ -176,14 +214,15 @@
     margin-bottom: 4rem;
   }
 
-  /* a:hover {
+  a:hover {
 
     .img-sm,
     .img-lg {
-      border: 1px solid #07070740;
+      scale: .98;
+      border-radius: 3rem;
       transition: 300ms ease-in-out;
     }
-  } */
+  }
 }
 
 @media (min-width: 425px) {
@@ -194,20 +233,27 @@
 }
 
 @media (min-width: 799px) {
+  .nav-sub {
+    width: 95%;
+  }
+
+  .nav-links {
+    display: flex;
+    gap: 4rem;
+  }
+
   .text-holder {
     margin-bottom: 8rem;
+  }
+
+  .container-title {
+    width: 60%;
   }
 }
 
 @media (min-width: 1499px) {
   h2 {
     font-weight: 200;
-  }
-
-  .nav-sub {
-    width: 80%;
-    gap: 4rem;
-    padding-right: 0rem;
   }
 
   .container {
@@ -222,5 +268,11 @@
   .img-lg {
     width: 1280px;
     height: 720px;
+  }
+
+  .img-profile {
+    border-radius: 100rem;
+    width: 400px;
+    height: 400px;
   }
 }
