--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,8 +47,8 @@
 
   h1 {
     font-weight: 600;
-    line-height: 1.2;
-    font-size: clamp(40px, 8vw, 96px);
+    line-height: 1.1;
+    font-size: clamp(60px, 8vw, 112px);
   }
 
   h2 {
@@ -97,10 +97,11 @@
     z-index: 3;
 
     a,
-    button {
-      color: white;
-      font-size: clamp(16px, 2vw, 22px);
-      font-weight: 300;
+    button,
+    p,
+    b {
+      font-size: clamp(18px, 2vw, 22px);
+      /* color: white; */
     }
   }
 
@@ -109,8 +110,10 @@
     justify-content: center;
     align-items: center;
     width: 95%;
-    background: #070707;
     border-radius: 100rem;
+    background: #f5f5f580;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
   }
 
   .nav-sub {
@@ -177,11 +180,11 @@
   .social-btn {
     width: 4rem;
     height: 4rem;
-    background: #070707;
-    border-radius: 100rem;
     display: flex;
     justify-content: center;
     align-items: center;
+    background: #070707;
+    border-radius: 100rem;
     transition: 300ms ease-in-out;
   }
 
@@ -205,9 +208,14 @@
     transition: 300ms ease-in-out;
   }
 
-  .text-holder {
+  .text-holder,
+  .text-holder-contact {
     width: 100%;
-    padding-top: 0rem;
+  }
+
+  .splash-p {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
   }
 
   a:hover {
@@ -239,6 +247,11 @@
     gap: 2rem;
   }
 
+  .splash-p {
+    margin-top: 2rem;
+    margin-bottom: 4rem;
+  }
+
   .container-title {
     width: 60%;
   }
@@ -253,9 +266,8 @@
     width: 80%;
   }
 
-  .text-holder {
+  .text-holder-contact {
     width: 65%;
-    padding-top: 2rem;
   }
 
   .img-lg {
