--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,17 +1,9 @@
 @import url("https://api.fontshare.com/v2/css?f[]=switzer@100,101,200,201,300,301,400,401,500,501,600,601,700,701,800,801,900,901,1,2&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
 
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
-    width: 8px;
     display: none;
-  }
-
-  ::-webkit-scrollbar-track {
-    background: whitesmoke;
-  }
-
-  ::-webkit-scrollbar-thumb {
-    background: #070707;
   }
 
   html,
@@ -28,15 +20,27 @@
     margin: 0px;
     box-sizing: border-box;
     z-index: 2;
-    font-family: 'Switzer', sans-serif;
+    font-family: "Inter Tight", sans-serif;
     color: #070707;
   }
 
   .background {
-    position: fixed;
-    height: 100vh;
     width: 100%;
-    z-index: 1;
+    height: 100vh;
+    background-image: url(/background.jpg);
+    background-position: top center;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    position: fixed;
+    opacity: 0.1;
+  }
+
+  .overlay {
+    width: 100%;
+    height: 100vh;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    position: fixed;
   }
 
   button {
@@ -47,24 +51,25 @@
 
   h1 {
     font-weight: 600;
-    line-height: 1.1;
-    font-size: clamp(60px, 8vw, 112px);
+    line-height: 1;
+    font-size: clamp(42px, 4vw, 64px);
   }
 
   h2 {
     font-weight: 400;
     line-height: 1.4;
-    font-size: clamp(26px, 4vw, 58px);
+    font-size: clamp(24px, 4vw, 42px);
   }
 
   p {
-    font-size: clamp(16px, 2vw, 20px);
-    font-weight: 300;
+    color: #070707aa;
+    font-size: clamp(14px, 2vw, 18px);
+    font-weight: 400;
     line-height: 1.4;
   }
 
   span {
-    font-weight: 600;
+    font-weight: 400;
     font-size: clamp(20px, 2vw, 28px);
     line-height: 1.4;
   }
@@ -72,8 +77,9 @@
   a,
   button {
     line-height: 1.4;
-    font-size: clamp(16px, 2vw, 20px);
-    font-weight: 300;
+    color: #070707aa;
+    font-size: clamp(14px, 2vw, 18px);
+    font-weight: 400;
     text-decoration: none;
     width: fit-content;
     transition: 150ms linear;
@@ -90,67 +96,65 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 0rem;
+    top: 2rem;
     transition: 0.3s;
     padding-bottom: 0rem;
     width: 100%;
     z-index: 3;
-    border-radius: 0rem 0rem 2rem 2rem;
-    background: #f5f5f580;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px);
-
-    a,
-    button,
-    p,
-    b {
-      font-size: clamp(18px, 2vw, 22px);
-      /* color: white; */
-    }
   }
 
   .nav-nav {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 95%;
-    /* border-radius: 100rem;
-    background: #f5f5f580;
-    backdrop-filter: blur(12px);
-    -webkit-backdrop-filter: blur(12px); */
+    min-width: fit-content;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    background: #ffffff80;
+    border-radius: 100rem;
   }
 
   .nav-sub {
-    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    height: 6rem;
+    height: 4rem;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
   }
 
   .nav-links {
-    display: none;
+    display: flex;
+    gap: 2rem;
   }
 
   .container-holder,
-  .container-holder-top {
+  .project-holder {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
     flex-wrap: wrap;
-    margin-block: 2rem;
   }
 
-  .container-holder-top {
-    margin-block: 0rem;
-    align-items: flex-end;
-  }
-
-  .container {
+  .project-holder {
+    gap: 2rem 2rem;
+    align-items: flex-start;
     width: 95%;
+    margin-bottom: 4rem;
+    text-align: center;
+  }
+
+  .container,
+  .container-title {
+    width: 95%;
+  }
+
+  .container-title {
+    padding-top: 8rem;
+    padding-bottom: 2rem;
+    text-align: center;
   }
 
   img {
@@ -162,14 +166,8 @@
   .img-lg {
     width: 100%;
     height: auto;
-    border-radius: 2rem;
+    border-radius: 1rem;
     transition: 300ms ease-in-out;
-  }
-
-  .img-profile {
-    border-radius: 100rem;
-    width: 150px;
-    height: 150px;
   }
 
   .social-btn-holder {
@@ -182,8 +180,8 @@
   }
 
   .social-btn {
-    width: 4rem;
-    height: 4rem;
+    width: 3.25rem;
+    height: 3.25rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -192,44 +190,47 @@
     transition: 300ms ease-in-out;
   }
 
-  .contact-btn {
-    background: #070707;
-    color: white;
-    border-radius: 100rem;
-    width: 150px;
-    height: 150px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    opacity: 1;
-    transition: 300ms ease-in-out;
-  }
-
-  .social-btn:hover,
-  .contact-btn:hover {
+  .social-btn:hover {
     opacity: 1;
     scale: 0.9;
     transition: 300ms ease-in-out;
   }
 
-  .text-holder,
-  .text-holder-contact {
-    width: 100%;
+  .text-holder {
+    width: 95%;
+    text-align: center;
+  }
+
+  .splash-title-holder {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+
+  .splash-title-left,
+  .splash-title-right {
+    width: 95%;
+    text-align: center;
+  }
+
+  .divider {
+    display: none;
   }
 
   .splash-p {
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
   }
 
-  a:hover {
-
-    .img-sm,
-    .img-lg {
-      scale: .98;
-      border-radius: 3rem;
-      transition: 300ms ease-in-out;
-    }
+  .project {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
   }
 }
 
@@ -241,37 +242,54 @@
 }
 
 @media (min-width: 799px) {
+  h1 {
+    line-height: 1.2;
+  }
+
   .nav-sub {
-    width: 95%;
-    justify-content: space-between;
+    padding-left: 4rem;
+    padding-right: 4rem;
   }
 
-  .nav-links {
-    display: flex;
-    gap: 2rem;
-  }
-
-  .splash-p {
-    margin-top: 2rem;
-    margin-bottom: 4rem;
-  }
-
-  .container-title {
-    width: 60%;
-  }
-}
-
-@media (min-width: 1499px) {
   .nav-links {
     gap: 4rem;
   }
 
-  .container {
+  .splash-title-holder {
+    flex-direction: row;
+    gap: 1.5rem;
+  }
+
+  .splash-title-left {
+    width: 45%;
+    text-align: left;
+  }
+
+  .splash-title-right {
+    width: 45%;
+    text-align: right;
+  }
+
+  .divider {
+    display: block;
+  }
+
+  .splash-p {
+    margin-top: 2rem;
+    margin-bottom: 8rem;
+  }
+}
+
+@media (min-width: 1499px) {
+
+  .container,
+  .container-title {
     width: 80%;
   }
 
-  .text-holder-contact {
-    width: 65%;
+  .img-sm,
+  .img-lg {
+    border-radius: 2rem;
   }
 
   .img-lg {
@@ -279,14 +297,7 @@
     height: 720px;
   }
 
-  .img-profile {
-    border-radius: 100rem;
-    width: 400px;
-    height: 400px;
-  }
-
-  .contact-btn {
-    width: 400px;
-    height: 400px;
+  .splash-title-holder {
+    gap: 2.5rem;
   }
 }
