--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,7 +32,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: fixed;
-    opacity: 0.1;
+    opacity: 0.085;
   }
 
   .overlay {
@@ -70,7 +70,7 @@
 
   span {
     font-weight: 400;
-    font-size: clamp(20px, 2vw, 28px);
+    font-size: clamp(20px, 2vw, 24px);
     line-height: 1.4;
   }
 
@@ -96,7 +96,7 @@
     justify-content: center;
     align-items: center;
     position: fixed;
-    top: 2rem;
+    top: 1rem;
     transition: 0.3s;
     padding-bottom: 0rem;
     width: 100%;
@@ -119,14 +119,25 @@
     justify-content: center;
     align-items: center;
     gap: 1rem;
-    height: 4rem;
-    padding-left: 2.5rem;
-    padding-right: 2.5rem;
+    height: 3rem;
+    padding-left: 0.25rem;
+    padding-right: 0.25rem;
   }
 
   .nav-links {
     display: flex;
-    gap: 2rem;
+    gap: 0rem;
+
+    a,
+    button {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: #07070708;
+      border-radius: 100rem;
+      height: 2.5rem;
+      width: 6rem;
+    }
   }
 
   .container-holder,
@@ -144,6 +155,29 @@
     width: 95%;
     margin-bottom: 4rem;
     text-align: center;
+  }
+
+  .project {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    background: #ffffff80;
+    border-radius: 1rem;
+    transition: 150ms linear;
+  }
+
+  .project:hover {
+    background: #07070708;
+    transition: 150ms linear;
+  }
+
+  .project-title {
+    padding: 2rem;
+    padding-bottom: 1rem;
   }
 
   .container,
@@ -168,6 +202,8 @@
     height: auto;
     border-radius: 1rem;
     transition: 300ms ease-in-out;
+
+    padding: 1rem;
   }
 
   .social-btn-holder {
@@ -224,14 +260,6 @@
     margin-top: 2rem;
     margin-bottom: 4rem;
   }
-
-  .project {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2rem;
-  }
 }
 
 @media (min-width: 425px) {
@@ -246,13 +274,16 @@
     line-height: 1.2;
   }
 
-  .nav-sub {
-    padding-left: 4rem;
-    padding-right: 4rem;
+  .nav-links {
+    gap: 2rem;
   }
 
-  .nav-links {
-    gap: 4rem;
+  .project-holder {
+    text-align: left;
+  }
+
+  .project {
+    align-items: flex-start;
   }
 
   .splash-title-holder {
@@ -280,6 +311,13 @@
   }
 }
 
+@media (min-width: 999px) {
+  .img-lg {
+    width: 960px;
+    height: 540px;
+  }
+}
+
 @media (min-width: 1499px) {
 
   .container,
@@ -290,12 +328,13 @@
   .img-sm,
   .img-lg {
     border-radius: 2rem;
+    padding: 0;
   }
 
-  .img-lg {
+  /* .img-lg {
     width: 1280px;
     height: 720px;
-  }
+  } */
 
   .splash-title-holder {
     gap: 2.5rem;
