--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
-    background: whitesmoke;
+    background: white;
   }
 
   * {
@@ -32,7 +32,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     position: fixed;
-    opacity: 0.085;
+    opacity: 0.075;
     z-index: 1;
   }
 
@@ -54,7 +54,10 @@
   h1 {
     font-weight: 600;
     line-height: 1;
-    font-size: clamp(42px, 4vw, 64px);
+    font-size: clamp(38px, 4vw, 64px);
+    font-family: "Switzer", sans-serif;
+
+    font-weight: 800;
   }
 
   h2 {
@@ -106,9 +109,9 @@
 
   .nav-slider {
     position: absolute;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: #07070708;
+    backdrop-filter: blur(8px) saturate(200%);
+    -webkit-backdrop-filter: blur(8px) saturate(200%);
+    background: #f5f5f580;
     border-radius: 100rem;
     height: 2.5rem;
     width: 6rem;
@@ -121,9 +124,9 @@
     justify-content: center;
     align-items: center;
     min-width: fit-content;
-    backdrop-filter: blur(8px);
-    -webkit-backdrop-filter: blur(8px);
-    background: #ffffff80;
+    backdrop-filter: blur(8px) saturate(200%);
+    -webkit-backdrop-filter: blur(8px) saturate(200%);
+    background: #ffffff40;
     border-radius: 100rem;
   }
 
@@ -174,6 +177,24 @@
     animation: fade 500ms ease-in-out forwards;
   }
 
+  .pulse {
+    animation: pulsing 2500ms ease-in-out infinite;
+  }
+
+  @keyframes pulsing {
+    0% {
+      scale: 0.8;
+    }
+
+    50% {
+      scale: 1.25;
+    }
+
+    100% {
+      scale: 0.8;
+    }
+  }
+
   @keyframes fade {
     0% {
       opacity: 0;
@@ -202,7 +223,7 @@
     align-items: center;
     backdrop-filter: blur(8px);
     -webkit-backdrop-filter: blur(8px);
-    background: #ffffff80;
+    background: #f5f5f580;
     border-radius: 1rem;
     transition: 150ms linear;
   }
@@ -296,6 +317,7 @@
   .splash-p {
     margin-top: 2rem;
     margin-bottom: 4rem;
+    font-size: clamp(18px, 2vw, 24px);
   }
 
   .footer {
