--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-@import url("https://api.fontshare.com/v2/css?f[]=switzer@100,101,200,201,300,301,400,401,500,501,600,601,700,701,800,801,900,901,1,2&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&display=swap');
-
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
     display: none;
@@ -20,7 +17,6 @@
     margin: 0px;
     box-sizing: border-box;
     z-index: 2;
-    font-family: "Inter Tight", sans-serif;
     color: #070707;
   }
 
@@ -52,11 +48,8 @@
   }
 
   h1 {
-    font-weight: 600;
     line-height: 1;
     font-size: clamp(36px, 4vw, 64px);
-    font-family: "Switzer", sans-serif;
-
     font-weight: 800;
   }
 
@@ -150,7 +143,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      /* background: #07070708; */
       border-radius: 100rem;
       height: 2.5rem;
       width: 6rem;
@@ -236,6 +228,23 @@
   .project-title {
     padding: 2rem;
     padding-bottom: 1rem;
+    width: 100%;
+  }
+
+  .subject-holder {
+    display: flex;
+    gap: 0.4rem;
+    margin-top: 0.4rem;
+    justify-content: center;
+  }
+
+  .subject {
+    background: #07070710;
+    padding: 1rem;
+    padding-block: 0.4rem;
+    border-radius: 100rem;
+    font-size: clamp(12px, 2vw, 16px);
+    font-weight: 400;
   }
 
   .container,
@@ -260,7 +269,6 @@
     height: auto;
     border-radius: 1rem;
     transition: 300ms ease-in-out;
-
     padding: 1rem;
   }
 
@@ -336,10 +344,6 @@
       font-size: clamp(12px, 2vw, 16px);
     }
   }
-
-  .logo {
-    display: none;
-  }
 }
 
 @media (min-width: 425px) {
@@ -353,10 +357,6 @@
   h1 {
     line-height: 1.2;
   }
-
-  /* .nav-links {
-    gap: 2rem;
-  } */
 
   .project-holder {
     text-align: left;
@@ -389,6 +389,10 @@
     margin-top: 2rem;
     margin-bottom: 8rem;
   }
+
+  .subject-holder {
+    justify-content: left;
+  }
 }
 
 @media (min-width: 999px) {
@@ -418,15 +422,5 @@
 
   .splash-title-holder {
     gap: 2.5rem;
-  }
-}
-
-@media (min-width: 1599px) {
-  .logo {
-    display: block;
-    margin-left: 2.5%;
-    top: 2rem;
-    position: fixed;
-    z-index: 3;
   }
 }
